tests/macros/plugin/mask.stderr
error: option `mask` does not exist for kind `plugin`
 --> $DIR/mask.rs:2:44
  |
2 |     let q = requestty::questions![Plugin { mask: todo!() }];
  |                                            ^^^^
