tests/macros/plugin/mask.rs
fn main() {
    let q = requestty::questions![Plugin { mask: todo!() }];
}
